--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "qq-e52uORIVg"
    },
@@ -26,12 +26,12 @@
     "from tqdm.notebook import tqdm\n",
     "import scipy.io as sio\n",
     "from matplotlib import pyplot as plt\n",
-    "from vit_torch.ResNet_18 import ResNet_18\n",
-    "from vit_torch.ResNet_18_CCCT import ResNet_18_CCCT\n",
-    "from vit_torch.ResNet_18_CCTT import ResNet_18_CCTT\n",
-    "from vit_torch.ResNet_18_CTTT import ResNet_18_CTTT\n",
-    "from vit_torch.ResNet_18_CC_TT import ResNet_18_CC_TT\n",
-    "from vit_torch.ResNet_18_CC_TT_SE import ResNet_18_CC_TT_SE\n",
+    "from vit_torch.ResNet import ResNet\n",
+    "from vit_torch.ResNet_CCCT import ResNet_CCCT\n",
+    "from vit_torch.ResNet_CCTT import ResNet_CCTT\n",
+    "from vit_torch.ResNet_CTTT import ResNet_CTTT\n",
+    "from vit_torch.ResNet_CC_TT import ResNet_CC_TT\n",
+    "from vit_torch.ResNet_CC_TT_SE import ResNet_CC_TT_SE\n",
     "import matplotlib.lines as mlines\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
@@ -292,7 +292,7 @@
    },
    "outputs": [],
    "source": [
-    "model = ResNet_18_CC_TT_SE(channels = 16, num_classes = 2).cuda()\n",
+    "model = ResNet_CC_TT_SE(channels = 16, num_classes = 2).cuda()\n",
     "model_path_ = r'F:\\transformer\\vit-bp\\for_zhtian\\model\\mimic3_resnet_channels_16_cc_tt_se\\model_29.pth'\n",
     "model.load_state_dict(torch.load(model_path_))"
    ]
