--- a/test.ipynb
+++ b/test.ipynb
@@ -26,18 +26,22 @@
     "from tqdm.notebook import tqdm\n",
     "import scipy.io as sio\n",
     "from matplotlib import pyplot as plt\n",
-    "from vit_torch.ResNet import ResNet\n",
-    "from vit_torch.ResNet_CCCT import ResNet_CCCT\n",
-    "from vit_torch.ResNet_CCTT import ResNet_CCTT\n",
-    "from vit_torch.ResNet_CTTT import ResNet_CTTT\n",
-    "from vit_torch.ResNet_CC_TT import ResNet_CC_TT\n",
-    "from vit_torch.ResNet_CC_TT_SE import ResNet_CC_TT_SE\n",
+    "from vit_torch.ResNet_50 import ResNet_50\n",
+    "from vit_torch.ResNet_50_CCCT import ResNet_50_CCCT\n",
+    "from vit_torch.ResNet_50_CCTT import ResNet_50_CCTT\n",
+    "from vit_torch.ResNet_50_CTTT import ResNet_50_CTTT\n",
+    "from vit_torch.ResNet_50_TTTT import ResNet_50_TTTT\n",
+    "from vit_torch.ResNet_50_CCC_T import ResNet_50_CCC_T\n",
+    "from vit_torch.ResNet_50_CC_TT import ResNet_50_CC_TT\n",
+    "from vit_torch.ResNet_50_C_TTT import ResNet_50_C_TTT\n",
+    "from vit_torch.ResNet_50_C_TTT_SE import ResNet_50_C_TTT_SE\n",
     "import matplotlib.lines as mlines\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
     "import seaborn as sns\n",
     "sns.set()\n",
-    "import pickle"
+    "import pickle\n",
+    "import scipy.stats"
    ]
   },
   {
@@ -292,8 +296,8 @@
    },
    "outputs": [],
    "source": [
-    "model = ResNet_CC_TT_SE(channels = 16, num_classes = 2).cuda()\n",
-    "model_path_ = r'F:\\transformer\\vit-bp\\for_zhtian\\model\\mimic3_resnet_channels_16_cc_tt_se\\model_29.pth'\n",
+    "model = ResNet_50_C_TTT_SE(channels = 16, num_classes = 2).cuda()\n",
+    "model_path_ = model_path_ = r'model\\mimic3_resnet50_channels_16_c_ttt_se\\model.pth'\n",
     "model.load_state_dict(torch.load(model_path_))"
    ]
   },
@@ -337,12 +341,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.mean(abs(Y_test_sbp - np.round(Y_pred_sbp))))\n",
-    "print(np.std((Y_test_sbp - np.round(Y_pred_sbp))))\n",
-    "\n",
+    "print(np.mean(abs(Y_test_sbp - (Y_pred_sbp))))\n",
+    "print(np.std((Y_test_sbp - (Y_pred_sbp))))\n",
     "print(np.mean(abs(Y_test_dbp - Y_pred_dbp)))\n",
     "print(np.std((Y_test_dbp - Y_pred_dbp)))\n",
-    "\n"
+    "print(np.mean(abs(Y_test_map - Y_pred_map)))\n",
+    "print(np.std((Y_test_map - Y_pred_map)))"
    ]
   }
  ],
